<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:text="@string/energy_graph_1"
                        android:textColor="@color/textBlack"
                        android:textSize="24sp"
                        android:shadowColor="@color/EMAS_text_color"
                        android:shadowRadius="2"
                        android:textStyle="bold|italic"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/big_energy_graph"
                        android:contentDescription="energygraph1"
                        tools:ignore="HardcodedText"/>

                    <TextView
                        android:id="@+id/textView41"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:text="@string/energy_graph_2"
                        android:textColor="@color/textBlack"
                        android:shadowColor="@color/EMAS_text_color"
                        android:shadowRadius="2"
                        android:textSize="24sp"
                        android:textStyle="bold|italic"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/energy_graph_2"
                        android:contentDescription="energygraph2"
                        tools:ignore="HardcodedText"/>

                    <TextView
                        android:id="@+id/textView40"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:text="@string/energy_graph_3"
                        android:textColor="@color/textBlack"
                        android:shadowColor="@color/EMAS_text_color"
                        android:shadowRadius="2"
                        android:textSize="24sp"
                        android:textStyle="bold|italic"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/energy_grap_3"
                        android:contentDescription="energygraph3"
                        tools:ignore="HardcodedText"/>

                </LinearLayout>
            </ScrollView>
        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_drawer">

    </android.support.design.widget.NavigationView>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->

</android.support.v4.widget.DrawerLayout>